# stremio-purge

./: .gitignore  Cargo.toml  Dockerfile  NotPresent  README.org  build_setup.yml  dist-workspace.toml  fly.toml
.github/workflows/: release.yml
.sqlx/: query-029aeda5e4fbf5b66e68e51e14532d8f0f9f8418db4c8c2bee5b7c98883752bd.json  query-1abfeff7342966063591121d36612d66402be4719a27bb735c6ebb4e25bb6f94.json  query-5a88616c26a0aabb63ca705b7306644c5c8450fc76a0f85b90ca6a8dfe2647d3.json  query-8b706b06188757cb37daaa529da9142b7cc5da9729773a29932f3323ab20a0e1.json  query-b76a6dc38f7f2a23e8a0aac0b46f5ae2a680c563b1fe08e687c73f859a99a426.json  query-c8d94727ed396e629e4c273dc2b35b46f9ccc327feac867de467b969db61be9a.json  query-cd1f6a8735fda1af5a47b3d29418807cac5bedf5222b827335cf0053eb143000.json  query-f94b23ce7288b8a7e53a3f51aa09ded5d1acd0b519112fa87fbfb1faf73928e5.json
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs  repository.rs
crates/stremio-api/: Cargo.toml
crates/stremio-api/src/: lib.rs
crates/stremio-purge/: Cargo.toml
crates/stremio-purge/src/: main.rs
src/: main.rs
static/: index.html  script.js  style.css
static/config/: config.css  config.js  index.html
