[workspace]
members= [
  "crates/db",
  "crates/stremio-purge",
  "crates/stremio-api",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/SeanHaz/stremio-purge"
version = "0.2.0"
edition = "2024"
description = "Automatically clears continue watching"
license = "MIT"
authors = ["SeanHaz"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
