[package]
name = "stremio-api"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.44"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
