[package]
name = "stremio-purge"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
stremio-api = { path = "../stremio-api" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["formatting"] }
axum = { version = "0.8", features = ["json", "macros"] }   
tower-http = { version = "0.6", features = ["fs"] }        
tower-sessions = "0.14"
tower-sessions-cookie-store = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
log = "0.4.29"
env_logger = "0.11"
tokio-util = { version = "0.7.18", features = ["full"] }
rust-embed = { version = "8", features = ["include-exclude"] }
axum-embed = "0.1.0"
mime_guess = "2.0"

